# KNPC_Compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  functional.sh  hello.c  performance.sh  script  test.sh  实验总结.md
debug/: hello.c  runhello  shortcut.c  wpa_supplicant.conf
docs/: ANTLR4.md  SysY分析.md  TODO.md  Visitor模式.md  初赛统一答疑.md  加入Float.md  实验完成情况7.3.xlsx  实验总结.md  提交测评.md  语义分析.md
function_test2021/: 000_main  001_var_defn  002_var_defn2  003_var_defn3  004_arr_defn  005_arr_defn2  006_arr_defn3  007_arr_defn4  008_const_var_defn  009_const_var_defn2  010_const_var_defn3  011_const_array_defn  012_func_defn  013_var_defn_func  014_add  015_add2  016_addc  017_sub  018_sub2  019_subc  020_mul  021_mulc  022_div  023_divc  024_mod  025_rem  026_if  027_if2  028_if_test1  029_if_test2  030_if_test3  031_if_test4  032_if_test5  033_while_if  034_while_test1  035_while_test2  036_while_test3  037_break  038_continue  039_while_if_test1  (+63 more)
functional/: 51_short_circuit3.sy
meeting/: meeting_5.18.md
src/: ast.h  config.hpp  define.hpp  error.cpp  error.hpp  errorbuf.hpp  location.hpp  main.cpp  options.cpp  sysy.l  sysy.y
src/backend/asm/: arm_frame_manager.cpp  arm_frame_manager.hpp  arm_md.cpp  arm_md.hpp  mach_desc.hpp  offset_counter.cpp  offset_counter.hpp
src/codegen/: codegen.cpp  codegen.h
src/frontend/: SycCompiler.g4  SysY.interp  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYLexer.interp  SysYLexer.tokens  SysYParser.cpp  SysYParser.h  SysYVisitor.h  ir.cpp  ir.hpp  ir_vistor.cpp
src/frontend/.antlr/: CommonLex.interp  CommonLex.java  CommonLex.tokens  SycCompiler.interp  SycCompiler.tokens  SycCompilerLexer.interp  SycCompilerLexer.java  SycCompilerParser.java
src/frontend/parser/: SysY.g4  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYParser.cpp  SysYParser.h  SysYVisitor.h
src/frontend/scope/: func_scope.cpp  global_scope.cpp  local_scope.cpp  scope.cpp  scope.hpp  scope_stack.cpp  scope_stack.hpp
src/frontend/symb/: arrayvariable.cpp  function.cpp  symbol.cpp  symbol.hpp  variable.cpp
src/frontend/symbol/: SymTable.hpp
src/frontend/tac/: dataflow.cpp  flow_graph.cpp  flow_graph.hpp  tac copy.cpp  tac.cpp  tac.hpp  trans_helper.cpp  trans_helper.hpp
src/frontend/translation/: build_sym.cpp  generate_ir.cpp  generate_ir.hpp
src/frontend/type/: array_type.cpp  base_type.cpp  func_type.cpp  type.cpp  type.hpp
src/optimizer/: pass.hpp  ssa.cpp
src/util/: config.hpp  define.hpp  error.cpp  error.hpp  misc.cpp  options.hpp
test/: 000_main.c  007_arr_defn4.c  008_const_var_defn.c  009_const_var_defn2.c  010_const_var_defn3.c  015_add2.c  016_add_const.c  018_sub2.c  021_mulc.c  023_divc.c  029_if_test2.c  048_stmt_expr.c  050_unary_op2.c  078_big_int_mul.c  080_color.c  sylib.c
